--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <header class="header">
             <img src="./images/header__logo.svg" alt="Логотип страницы" class="header__logo">
             <div class="header__lang-links">
-                <a href="#" class="header__lang-link header__lang-link_active" lang="ru">Ru</a>
-                <a href="#" class="header__lang-link" lang="en">En</a>
+                <a href="#" class="header__lang-link header__lang-link_active root__link" lang="ru">Ru</a>
+                <a href="#" class="header__lang-link root__link" lang="en">En</a>
             </div>
         </header>
         <main>
@@ -53,7 +53,7 @@
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
                         <p class="place__website_url-heading">URL</p>
-                        <a href="http://park-kosa.ru" class="place__website_link">park-kosa.ru</a>
+                        <a href="http://park-kosa.ru" class="place__website_link root__link">park-kosa.ru</a>
                     </div>
                     <img src="./images/places/nikita-tikhomirov-1153188-unsplash.png" alt="Куршская коса" class="place__image">
                     <div class="place__text">
@@ -65,7 +65,7 @@
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
                         <p class="place__website_url-heading">URL</p>
-                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website_link">National Geographic</a>
+                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website_link root__link">National Geographic</a>
                     </div>
                     <img src="./images/places/m-r-760504-unsplash.png" alt="Кольский полуостров" class="place__image">
                     <div class="place__text">
@@ -77,7 +77,7 @@
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
                         <p class="place__website_url-heading">URL</p>
-                        <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__website_link">YouTube</a>
+                        <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__website_link root__link">YouTube</a>
                     </div>
                     <img src="./images/places/nail-gilfanov-527808-unsplash.png" alt="Алтай" class="place__image">
                     <div class="place__text">
@@ -89,7 +89,7 @@
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
                         <p class="place__website_url-heading">URL</p>
-                        <a href="https://vk.com/baikalmile" class="place__website_link">https://vk.com/baikalmile</a>
+                        <a href="https://vk.com/baikalmile" class="place__website_link root__link">https://vk.com/baikalmile</a>
                     </div>
                     <img src="./images/places/sergey-pesterev-1156037-unsplash.png" alt="Зимний Байкал" class="place__image">
                     <div class="place__text">
@@ -101,7 +101,7 @@
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
                         <p class="place__website_url-heading">URL</p>
-                        <a href="http://vodlozero.ru/" class="place__website_link">http://vodlozero.ru/</a>
+                        <a href="http://vodlozero.ru/" class="place__website_link root__link">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/places/vladimir-fedotov-652306-unsplash.png" alt="Карелия" class="place__image">
                     <div class="place__text">
@@ -109,7 +109,23 @@
                     </div>
                 </article>
             </section>
+            <section class="cover">
+                <div class="cover__background">
+                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay"></a>
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                </div>
+            </section>
         </main>
-        <footer></footer>
+        <footer class="footer">
+            <ul class="footer__links">
+                <li><a href="https://yandex.ru/maps" class="footer__link root__link">Карты</a></li>
+                <li><a href="https://yandex.ru/pogoda" class="footer__link root__link">Погода</a></li>
+                <li><a href="https://rasp.yandex.ru" class="footer__link root__link">Расписание</a></li>
+                <li><a href="https://calendar.yandex.ru" class="footer__link root__link">Календарь</a></li>
+                <li><a href="https://travel.yandex.ru" class="footer__link root__link">Путешествия</a></li>
+            </ul>
+            <p class="footer__copyright">&#169; 2022. Светлана Суворова</p>
+        </footer>
     </body>
 </html>
