--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@
       </head>
     <body class="root">
         <header class="header">
-            <img src="./images/header__logo.svg" alt="Логотип страницы" class="header__logo">
-            <div class="header__lang-links">
-                <a href="#" class="header__lang-link header__lang-link_active root__link" lang="ru">Ru</a>
-                <a href="#" class="header__lang-link root__link" lang="en">En</a>
-            </div>
-        </header>
+            <img src="./images/header-logo.svg" alt="Логотип страницы" class="header__logo">
+            <ul class="header__lang-links">
+                <li><a href="#" class="header__lang-link header__lang-link_active root__link" lang="ru">Ru</a></li>
+                <li><a href="#" class="header__lang-link root__link" lang="en">En</a></li>
+            </ul>
+        </header> 
         <main>
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <div class="lead__image">
-                    <img src="./images/Group 4.svg" alt="Маршрут" class="lead__route">
-                </div>
+                <div class="lead__image"></div>
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
             <section class="intro">
-                <h2 class="intro__title">Чего мы там не видели?</h2>
+                <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия&nbsp;— это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова&nbsp;— смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
                     <li>Часовых поясов <span class="intro__list_numbers">11</span></li>
@@ -35,18 +33,18 @@
                 </ul>
             </section>
             <section class="photo-grid">
-                <img src="./images/photo-grid/train.png" alt="Поезд" class="photo-grid__item">
-                <img src="./images/photo-grid/atharva-tulsi-472908-unsplash.png" alt="Горы" class="photo-grid__item">
-                <img src="./images/photo-grid/tuman.png" alt="Туман" class="photo-grid__item">
-                <img src="./images/photo-grid/sochi.png" alt="Сочи" class="photo-grid__item">
-                <img src="./images/photo-grid/arisa-chattasa-559627-unsplash.png" alt="Лёд" class="photo-grid__item">
-                <img src="./images/photo-grid/baikal.png" alt="Байкал" class="photo-grid__item">
-                <img src="./images/photo-grid/elbrus.png" alt="Эльбрус" class="photo-grid__item">
-                <img src="./images/photo-grid/stanislav-kondratiev-459423-unsplash.png" alt="Берег" class="photo-grid__item">
-                <img src="./images/photo-grid/kamchatka.png" alt="Камчатка" class="photo-grid__item">
-                <img src="./images/photo-grid/kamchatka2.png" alt="Камчатка 2" class="photo-grid__item">
-                <img src="./images/photo-grid/baikal2.png" alt="Байкал 2" class="photo-grid__item">
-                <img src="./images/photo-grid/ergaki.png" alt="Ергаки" class="photo-grid__item">
+                <img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
+                <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы" class="photo-grid__item">
+                <img src="./images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
+                <img src="./images/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__item">
+                <img src="./images/photo-grid-arisa.jpg" alt="Лёд" class="photo-grid__item">
+                <img src="./images/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__item">
+                <img src="./images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
+                <img src="./images/photo-grid-kondratiev.jpg" alt="Берег" class="photo-grid__item">
+                <img src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка" class="photo-grid__item">
+                <img src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка 2" class="photo-grid__item">
+                <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал 2" class="photo-grid__item">
+                <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__item">
             </section>
             <section class="places">
                 <article class="place">
@@ -55,7 +53,7 @@
                         <p class="place__website_url-heading">URL</p>
                         <a href="http://park-kosa.ru" class="place__website_link root__link">park-kosa.ru</a>
                     </div>
-                    <img src="./images/places/nikita-tikhomirov-1153188-unsplash.png" alt="Куршская коса" class="place__image">
+                    <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                     <div class="place__text">
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта&nbsp;— спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству&nbsp;— самая западная точка России, Балтийская коса,&nbsp;— и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -67,7 +65,7 @@
                         <p class="place__website_url-heading">URL</p>
                         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website_link root__link">National Geographic</a>
                     </div>
-                    <img src="./images/places/m-r-760504-unsplash.png" alt="Кольский полуостров" class="place__image">
+                    <img src="./images/place-kolsky.jpg" alt="Кольский полуостров" class="place__image">
                     <div class="place__text">
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг&nbsp;— тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
                         <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.</p>
@@ -79,7 +77,7 @@
                         <p class="place__website_url-heading">URL</p>
                         <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__website_link root__link">YouTube</a>
                     </div>
-                    <img src="./images/places/nail-gilfanov-527808-unsplash.png" alt="Алтай" class="place__image">
+                    <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
                     <div class="place__text">
                         <p class="place__paragraph">Алтай&nbsp;— одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест&nbsp;— горным воздухом.</p>
                         <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы&nbsp;— тоже обитатели Алтайского края.</p>
@@ -91,7 +89,7 @@
                         <p class="place__website_url-heading">URL</p>
                         <a href="https://vk.com/baikalmile" class="place__website_link root__link">https://vk.com/baikalmile</a>
                     </div>
-                    <img src="./images/places/sergey-pesterev-1156037-unsplash.png" alt="Зимний Байкал" class="place__image">
+                    <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                     <div class="place__text">
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                         <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд&nbsp;— 197.011 км/ч.</p>
@@ -103,7 +101,7 @@
                         <p class="place__website_url-heading">URL</p>
                         <a href="http://vodlozero.ru/" class="place__website_link root__link">http://vodlozero.ru/</a>
                     </div>
-                    <img src="./images/places/vladimir-fedotov-652306-unsplash.png" alt="Карелия" class="place__image">
+                    <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
                     <div class="place__text">
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров&nbsp;— леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                     </div>
@@ -112,7 +110,7 @@
             <section class="cover">
                 <div class="cover__background">
                     <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay"></a>
-                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
                 </div>
             </section>
