--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@
                 </article>
             </section>
             <section class="cover">
-                <div class="cover__background">
-                    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__overlay"></a>
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__background">
                     <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-                </div>
+                </a>
             </section>
         </main>
         <footer class="footer">
