--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <h2 class="intro__title">Чего мы там не&nbsp;видели?</h2>
                 <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия&nbsp;— это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова&nbsp;— смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li>Часовых поясов <span class="intro__list_numbers">11</span></li>
-                    <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_numbers">12</span></li>
-                    <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_numbers">16</span></li>
-                    <li>Природных заповедников <span class="intro__list_numbers">105</span></li>
-                    <li>Аэропортов <span class="intro__list_numbers">241</span></li>
+                    <li>Часовых поясов <span class="intro__list_accent">11</span></li>
+                    <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_accent">12</span></li>
+                    <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_accent">16</span></li>
+                    <li>Природных заповедников <span class="intro__list_accent">105</span></li>
+                    <li>Аэропортов <span class="intro__list_accent">241</span></li>
                 </ul>
             </section>
             <section class="photo-grid">
@@ -50,8 +50,8 @@
                 <article class="place">
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a href="http://park-kosa.ru" class="place__website_link root__link">park-kosa.ru</a>
+                        <p class="place__url-heading">URL</p>
+                        <a href="http://park-kosa.ru" class="place__link root__link">park-kosa.ru</a>
                     </div>
                     <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                     <div class="place__text">
@@ -62,8 +62,8 @@
                 <article class="place">
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website_link root__link">National Geographic</a>
+                        <p class="place__url-heading">URL</p>
+                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link root__link">National Geographic</a>
                     </div>
                     <img src="./images/place-kolsky.jpg" alt="Кольский полуостров" class="place__image">
                     <div class="place__text">
@@ -74,8 +74,8 @@
                 <article class="place">
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__website_link root__link">YouTube</a>
+                        <p class="place__url-heading">URL</p>
+                        <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link root__link">YouTube</a>
                     </div>
                     <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
                     <div class="place__text">
@@ -86,8 +86,8 @@
                 <article class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a href="https://vk.com/baikalmile" class="place__website_link root__link">https://vk.com/baikalmile</a>
+                        <p class="place__url-heading">URL</p>
+                        <a href="https://vk.com/baikalmile" class="place__link root__link">https://vk.com/baikalmile</a>
                     </div>
                     <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                     <div class="place__text">
@@ -98,8 +98,8 @@
                 <article class="place">
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <p class="place__website_url-heading">URL</p>
-                        <a href="http://vodlozero.ru/" class="place__website_link root__link">http://vodlozero.ru/</a>
+                        <p class="place__url-heading">URL</p>
+                        <a href="http://vodlozero.ru/" class="place__link root__link">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
                     <div class="place__text">
