--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <div class="lead__image"></div>
+                <img src="./images/lead-polka.jpg" class="lead__image" alt="Изображение главной страницы">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
             <section class="intro">
@@ -51,7 +51,7 @@
                     <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="http://park-kosa.ru" class="place__link root__link">park-kosa.ru</a>
+                        <a href="http://park-kosa.ru" class="place__link root__link" target="_blank">park-kosa.ru</a>
                     </div>
                     <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                     <div class="place__text">
@@ -63,7 +63,7 @@
                     <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link root__link">National Geographic</a>
+                        <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link root__link" target="_blank">National Geographic</a>
                     </div>
                     <img src="./images/place-kolsky.jpg" alt="Кольский полуостров" class="place__image">
                     <div class="place__text">
@@ -75,7 +75,7 @@
                     <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link root__link">YouTube</a>
+                        <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link root__link" target="_blank">YouTube</a>
                     </div>
                     <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
                     <div class="place__text">
@@ -87,7 +87,7 @@
                     <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="https://vk.com/baikalmile" class="place__link root__link">https://vk.com/baikalmile</a>
+                        <a href="https://vk.com/baikalmile" class="place__link root__link" target="_blank">https://vk.com/baikalmile</a>
                     </div>
                     <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                     <div class="place__text">
@@ -99,7 +99,7 @@
                     <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <a href="http://vodlozero.ru/" class="place__link root__link">http://vodlozero.ru/</a>
+                        <a href="http://vodlozero.ru/" class="place__link root__link" target="_blank">http://vodlozero.ru/</a>
                     </div>
                     <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
                     <div class="place__text">
@@ -115,13 +115,15 @@
             </section>
         </main>
         <footer class="footer">
-            <ul class="footer__links">
-                <li><a href="https://yandex.ru/maps" class="footer__link root__link">Карты</a></li>
-                <li><a href="https://yandex.ru/pogoda" class="footer__link root__link">Погода</a></li>
-                <li><a href="https://rasp.yandex.ru" class="footer__link root__link">Расписание</a></li>
-                <li><a href="https://calendar.yandex.ru" class="footer__link root__link">Календарь</a></li>
-                <li><a href="https://travel.yandex.ru" class="footer__link root__link">Путешествия</a></li>
-            </ul>
+            <nav>
+                <ul class="footer__links">
+                    <li><a href="https://yandex.ru/maps" class="footer__link root__link" target="_blank">Карты</a></li>
+                    <li><a href="https://yandex.ru/pogoda" class="footer__link root__link" target="_blank">Погода</a></li>
+                    <li><a href="https://rasp.yandex.ru" class="footer__link root__link" target="_blank">Расписание</a></li>
+                    <li><a href="https://calendar.yandex.ru" class="footer__link root__link" target="_blank">Календарь</a></li>
+                    <li><a href="https://travel.yandex.ru" class="footer__link root__link" target="_blank">Путешествия</a></li>
+                </ul>
+            </nav>
             <p class="footer__copyright">&#169; 2022. Светлана Суворова</p>
         </footer>
     </body>
